# sport_helper_rsclient

./: Cargo.toml  README.md
core_ui/: Cargo.toml
core_ui/src/: component.rs  event_dispatcher.rs  label.rs  layer.rs  lib.rs  message_box.rs  render.rs  tabel.rs  text_edit.rs  theme.rs  utils.rs  validators.rs
sport_app/: Cargo.toml
sport_app/src/: app.rs  main.rs
sport_core/: Cargo.toml
sport_core/src/: config.rs  controller.rs  events.rs  lib.rs  rest.rs
sport_core_db/: Cargo.toml
sport_core_db/src/: entity.rs  model.rs
sport_ui/: Cargo.toml
sport_ui/src/: exercise_editor.rs  exercises_table.rs  footer.rs  lib.rs  main_ui_layer.rs  menu.rs  page_account.rs  page_exercises.rs  tabs.rs  ui.rs  ui_events.rs
